<resources>
    <string name="app_name">Pixaflip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dipali Gunjal</string>
    <string name="nav_header_subtitle">dipaliG2021@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Favorite PDF</string>
    <string name="home_second">Home Second</string>
    <string name="playVideo">Play Video</string>
    <string name="nav_pdf">show pdf</string>
</resources>
