<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pixaflip.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:fontFamily="@font/amarante"
        android:textColor="@color/background"
        android:textSize="20sp"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.pixaflip.ui.home.HomeFragment"
        android:label="@string/home_second"
        android:textColor="@color/background"
        android:textSize="20sp"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pixaflip.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        android:fontFamily="@font/amarante"
        android:textColor="@color/background"
        android:textSize="20sp"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pixaflip.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        android:fontFamily="@font/amarante"
        android:textColor="@color/background"
        android:textSize="20sp"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.pixaflip.DisplayVideoActivity"
        android:label="@string/playVideo">
        <action
            android:id="@+id/video_To_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_pdf"
        android:name="com.example.pixaflip.DisplayPdfActivity"
        android:label="@string/nav_pdf">
        <action
            android:id="@+id/video_To_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>